# rocketsim-utils

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
air_sim/: Cargo.toml
air_sim/examples/: aerial.rs
air_sim/src/: lib.rs
air_sim/src/bullet/: box_shape.rs  mod.rs  rigid_body.rs  transform_util.rs
air_sim/src/bullet/collision/: box_shape.rs  collision_world.rs  mod.rs
air_sim/src/bullet/dynamics/: discrete_dynamics_world.rs  mod.rs  rigid_body.rs
air_sim/src/bullet/dynamics/constraint_solver/: contact_solver_info.rs  mod.rs  seq_impulse_constraint_solver.rs  solver_body.rs
air_sim/src/bullet/linear_math/: mod.rs  transform_util.rs
air_sim/src/sim/: arena.rs  consts.rs  game_mode.rs  mod.rs  mutator_config.rs  phys_state.rs
air_sim/src/sim/car/: base.rs  car_body_config.rs  car_controls.rs  car_info.rs  car_state.rs  mod.rs
ball_sim/: Cargo.toml
ball_sim/examples/: ball.rs  basic_ball.rs
ball_sim/src/: base.rs  lib.rs  logging.rs
ball_sim/src/bullet/: mod.rs
ball_sim/src/bullet/collision/: mod.rs
ball_sim/src/bullet/collision/broadphase/: grid_broadphase.rs  mod.rs  overlapping_pair_cache.rs
ball_sim/src/bullet/collision/dispatch/: collision_dispatcher.rs  collision_world.rs  convex_concave_collision_alg.rs  convex_plane_collision_alg.rs  internal_edge_utility.rs  mod.rs  tri_bvh_util.rs
ball_sim/src/bullet/collision/narrowphase/: manifold_point.rs  mod.rs  persistent_manifold.rs
ball_sim/src/bullet/collision/shapes/: bvh_triangle_mesh_shape.rs  collision_shape.rs  mod.rs  optimized_bvh.rs  sphere_shape.rs  static_plane_shape.rs  triangle_callback.rs  triangle_info_map.rs  triangle_mesh.rs  triangle_mesh_shape.rs  triangle_shape.rs
ball_sim/src/bullet/dynamics/: discrete_dynamics_world.rs  mod.rs  rigid_body.rs  sphere_rigid_body.rs
ball_sim/src/bullet/dynamics/constraint_solver/: contact_solver_info.rs  mod.rs  seq_impulse_constraint_solver.rs  solver_body.rs  solver_constraint.rs
ball_sim/src/bullet/linear_math/: angle.rs  mod.rs
ball_sim/src/shared/: aabb.rs  bvh.rs  mod.rs
ball_sim/src/sim/: collision_mesh_file.rs  consts.rs  game_mode.rs  mod.rs  mutator_config.rs  phys_state.rs  team.rs
ball_sim/src/sim/arena/: arena_config.rs  arena_contact_tracker.rs  arena_events.rs  base.rs  mod.rs
ball_sim/src/sim/ball/: ball_state.rs  base.rs  mod.rs
ball_sim_cpp/: Cargo.toml  build.rs
ball_sim_cpp/make_example/: CMakeLists.txt  README.md  ball_sim.h  main.cpp
ball_sim_cpp/src/: lib.rs
drive_sim/: Cargo.toml
drive_sim/examples/: drive.rs
drive_sim/src/: lib.rs
drive_sim/src/bullet/: linear_math.rs
drive_sim/src/bullet/collision/: box_shape.rs  mod.rs  static_plane_shape.rs
drive_sim/src/bullet/dynamics/: contact_constraint.rs  discrete_dynamics_world.rs  mod.rs  rigid_body.rs  vehicle.rs
drive_sim/src/bullet/dynamics/vehicle/: mod.rs  vehicle_rl.rs  wheel_info.rs
drive_sim/src/shared/: aabb.rs  bvh.rs  mod.rs
drive_sim/src/sim/: arena.rs  consts.rs  game_mode.rs  linear_piece_curve.rs  mod.rs  mutator_config.rs  phys_state.rs
drive_sim/src/sim/boost_pad/: base.rs  boost_pad_config.rs  boost_pad_grid.rs  boost_pad_state.rs  mod.rs
drive_sim/src/sim/car/: base.rs  car_body_config.rs  car_controls.rs  car_state.rs  mod.rs
turn_sim/: Cargo.toml
turn_sim/examples/: turn.rs
turn_sim/src/: car_controls.rs  consts.rs  lib.rs
