[workspace]
resolver = "3"
members = ["air_sim", "ball_sim", "ball_sim_cpp", "drive_sim", "turn_sim"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
glam = "0.32.1"

[workspace.lints.clippy]
all = "warn"
# nursery = "warn"
# pedantic = "warn"
# suboptimal_flops = { level = "allow", priority = 1 }
# cast_possible_truncation = { level = "allow", priority = 1 }
# cast_precision_loss = { level = "allow", priority = 1 }
# cast_sign_loss = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 2

[profile.release]
strip = true
lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
