[package]
name = "air_sim"
version.workspace = true
edition.workspace = true

[dependencies]
glam.workspace = true

[dev-dependencies]
indicatif = "0.18.4"
rand = "0.10.0"
rocketsim = { git = "https://github.com/ZealanL/RocketSim.git", branch = "v3-rust", default-features = false }

[lints]
workspace = true
