[package]
name = "ball_sim"
version.workspace = true
edition.workspace = true

[dependencies]
ahash = "0.8.12"
arrayvec = "0.7.6"
byteorder = "1.5.0"
env_logger = "0.11.10"
glam.workspace = true
log = "0.4.29"

[dev-dependencies]
indicatif = "0.18.4"
rand = "0.10.0"
rocketsim = { git = "https://github.com/ZealanL/RocketSim.git", branch = "v3-rust", default-features = false }

[lints]
workspace = true
